Fixup: Adjust transparency for dark mode image
I decided I wanted it to be more transparent than before.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,7 +160,7 @@ main.dark {
     background-image: url("../images/react-icon-dark.png");
     background-repeat: no-repeat;
     background-position: right center;
-    opacity: 0.5;
+    opacity: 0.15;
 }
 
 .main--facts > li {
